# movies

./: .gitmodules  README.md  update.sh
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/movies/: App.kt  MainActivity.kt
android/app/src/main/java/com/movies/data/command/: GetMovieDetailCommand.kt  GetMoviesListCommand.kt
android/app/src/main/java/com/movies/data/dto/: MovieDto.kt
android/app/src/main/java/com/movies/di/: AppComponent.kt  AppModule.kt  PmModule.kt  ServiceModule.kt
android/app/src/main/java/com/movies/navigation/: Navigation.kt
android/app/src/main/java/com/movies/util/: HasViewModel.kt  Identifiable.kt  Layout.kt
android/app/src/main/res/drawable/: rect_rounded_4.xml
android/app/src/main/res/layout/: activity_main.xml  item_movie_actor.xml  item_movie_actors.xml  item_movie_header.xml  item_movie_section.xml  item_movie_tile.xml  item_movie_tile_loading.xml  layout_movie_detail.xml  layout_movies_list.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  props.xml  strings.xml  styles.xml
android/app/src/main/res/values-land/: props.xml
android/app/src/main/res/values-night/: colors.xml
android/app/src/test/java/tools/: IntegrationTest.kt  IntegrationTestApp.kt  TestDependencies.kt
android/app/src/test/java/tools/data/service/: TestApiService.kt
android/app/src/test/java/tools/di/: TestAppComponent.kt  TestServiceModule.kt
android/app/src/test/java/tools/log/: TimberPrintTree.kt
android/app/src/test/java/tools/rx/: TestSubject.kt
(+32 files in other folders)
